Added new files to directories, changed the main files

--- a/game for 4/index.html
+++ b/game for 4/index.html
@@ -12,15 +12,24 @@
 	
 	
 	<body>
+		<div id = "all" class = "all">
 			<div id = "workarea" class = "workarea">
 				<div id = "cloud1" class = "cloud"> Игрок 1 </div>
 				<div id = "cloud2" class = "cloud"> Игрок 2 </div>
 				<div id = "cloud3" class = "cloud"> Игрок 3 </div>
 				<div id = "cloud4" class = "cloud"> Игрок 4 </div>
+				<div id = "cardarea" class = "cardarea">
+					<div id = "card1" class = "card"></div>
+					<div id = "card2" class = "card"></div>
+					<div id = "card3" class = "card"></div>
+					<div id = "card4" class = "card"></div>
+					<div id = "statementarea" class = "statementarea"></div>
+				</div>
 			</div>
 			
 			
 			
 			
+		</div>
 	</body>
 </html>	
