--- a/gamefor2/game2.html
+++ b/gamefor2/game2.html
@@ -7,29 +7,20 @@
 		<meta name="author" content="Ståle Refsnes">
 		<meta charset="UTF-8">
 		<link rel = "icon" type = "image/x-icon" href = "../images/icon.ico">
-		<link rel = "stylesheet" content = "text/css" href = "../game for 2/main.css">
+		<link rel = "stylesheet" content = "text/css" href = "./game2.css">
 	</head>
 	
 	
 	<body>
-		<div id = "all" class = "all">
 			<div id = "workarea" class = "workarea">
 				<div id = "cloud1" class = "cloud"> Игрок 1 </div>
 				<div id = "cloud2" class = "cloud"> Игрок 2 </div>
 				<div id = "cloud3" class = "cloud"> Игрок 3 </div>
 				<div id = "cloud4" class = "cloud"> Игрок 4 </div>
-				<div id = "cardarea" class = "cardarea">
-					<div id = "card1" class = "card"></div>
-					<div id = "card2" class = "card"></div>
-					<div id = "card3" class = "card"></div>
-					<div id = "card4" class = "card"></div>
-					<div id = "statementarea" class = "statementarea"></div>
-				</div>
 			</div>
 			
 			
 			
 			
-		</div>
 	</body>
 </html>	
